<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099FF"
    tools:context="andremacnamara.com.macnamaraweather.TodaysWeather">

    <TextView
        android:id="@+id/TodayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/todays"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/tempPlaceholder"
        android:textColor="@android:color/white"
        android:textSize="150sp" />

       <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temperatureLabel"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/temperatureLabel"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:src="@drawable/degree"
        android:contentDescription="@string/degree_image_view"/>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refreshImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/timePlaceholder"
        android:textColor="#80ffffff"
        android:textSize="18sp" />

    <!--<TextView-->
        <!--android:id="@+id/locationLabel"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@+id/timeLabel"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="38dp"-->
        <!--android:text="@string/locationPlaceholder"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="24sp" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="100" android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/precipLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/precipPlaceholder"
                android:textColor="#80ffffff" />

            <TextView
                android:id="@+id/precipValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/precipValue"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/humidityPlaceholder"
                android:textColor="#80ffffff" />

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/humidityValue"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/todayButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeLabel"
        android:layout_alignStart="@+id/timeLabel"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/todayButtonLabel"
        android:textSize="18sp"
        android:background="#40ffffff"
        android:textColor="#ffffffff"/>


    <ImageView
        android:id="@+id/refreshImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TodayLabel"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/refresh"
        android:contentDescription="@string/todo" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/refreshImageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/summaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/todayButtonLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/getting_current_weather_data"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>
